# zotmcp

./: .dockerignore  .gitignore  .mcp.json  CACHE_MAP.md  DOCKER.md  README.md  README_VECTORIZATION.md  TESTING.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: README.md  build.yml
conf/: deploy.yaml  local.yaml  vectorize.yaml  zotero.yaml
conf/db/: dev.yaml  upstream.yaml
containers/deploy/: Dockerfile  README.md  build.sh  run.sh
deploy/: Dockerfile  build.sh  entrypoint.sh  run.sh  startup.sh
examples/: claude_code_mcp_docker.json  claude_desktop_config_docker.json
notebooks/: review_chromadb_metadata.ipynb
scripts/: README.md  build.sh  lookup_item.py  package_for_distribution.sh  run_vectorization.py  update_vectors.sh
src/: __init__.py  main.py  models.py
src/conf/: runtime.yaml
src/tests/: __init__.py  conftest.py  test_bootstrap.py  test_integration.py  test_search_tool.py  test_server_runs.py
templates/: ra.jinja2  rag.jinja2
