[project]
name = "zotmcp"
version = "0.1.0"
description = "MCP server for semantic search of Zotero academic library"
authors = [{name = "Nicolas Suzor", email = "nic@suzor.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "buttermilk",
]

[tool.uv.sources]
buttermilk = { git = "https://github.com/qut-dmrc/buttermilk.git", rev = "dev" }

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Increase timeout for integration tests
timeout = 300
addopts = "-v --tb=short"
